--- a/L01P02-2022-AG-652/appsettings.json
+++ b/L01P02-2022-AG-652/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "equiposDbConnection": "Data Source = LOCALHOST; Initial Catalog = blog_db; User id = sa; Password = 1234; Connect Timeout = 120; Encrypt = false "
+    "blogDbConnection": "Data Source = LOCALHOST; Initial Catalog = blog_db; User id = sa; Password = 1234; Connect Timeout = 120; Encrypt = false "
   },
   "Logging": {
     "LogLevel": {
